--- a/test.html
+++ b/test.html
@@ -69,6 +69,8 @@
 		for (var i = 0; i < arr.length; i++) {
 			new_arr.push(arr[i].length);
 		} console.log(new_arr);
+
+пробная запись для Джит
 	
 	</script>
 	
